# Img2TypTeX

./: .gitignore  README.md  package-lock.json  package.json  winkhaing.md
.github/workflows/: release.yml
src/: overlay.html  result.html  settings.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  config.rs  lib.rs  main.rs  ocr.rs
src/lib/: converter.js  converter.test.js  theme.js
web_app/: README.md  app.js  index.html  package.json  style.css
web_app/api/: ocr.js
