[package]
name = "img2typtex"
version = "0.1.0"
description = "Snip a math equation anywhere on screen, OCR it, and get ready-to-paste Typst markup."
authors = ["Win"]
edition = "2021"

[lib]
name = "img2typtex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Screen capture (cross-platform: X11/Wayland on Linux, macOS, Windows)
xcap = "0.9"
# Used to encode captured frames to PNG bytes for the OCR request
image = "0.25"

# HTTP client for calling the Anthropic Messages API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"

tokio = { version = "1", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
